--- a/templates/config.j2
+++ b/templates/config.j2
@@ -590,7 +590,7 @@ logfile logfile
 #      you read the log messages, you may even be able to solve the
 #      problem on your own.
 #
-#debug     1 # Log the destination for each request Privoxy let through. See also debug 1024.
+debug     {{privoxy_debug}} # Log the destination for each request Privoxy let through. See also debug 1024.
 #debug  1024 # Actions that are applied to all sites and maybe overruled later on.
 #debug  4096 # Startup banner and warnings
 #debug  8192 # Non-fatal errors
